// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoComplete legacy dataSource should accept react element option 1`] = `
<div
  class="ezd-select ezd-select-auto-complete ezd-select-single ezd-select-open ezd-select-show-search"
>
  <div
    class="ezd-select-selector"
  >
    <span
      class="ezd-select-selection-search"
    >
      <input
        aria-activedescendant="undefined_list_0"
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autocomplete="off"
        class="ezd-select-selection-search-input"
        role="combobox"
        type="search"
        value=""
      />
    </span>
    <span
      class="ezd-select-selection-placeholder"
    />
  </div>
  <div>
    <div
      class="ezd-select-dropdown"
      style="opacity:0;pointer-events:none"
    >
      <div>
        <div
          id="undefined_list"
          role="listbox"
          style="height:0;width:0;overflow:hidden"
        >
          <div
            aria-label="ReactNode"
            aria-selected="false"
            id="undefined_list_0"
            role="option"
          >
            key
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position:relative"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height:256px;overflow-y:auto;overflow-anchor:none"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display:flex;flex-direction:column"
              >
                <div
                  aria-selected="false"
                  class="ezd-select-item ezd-select-item-option ezd-select-item-option-active"
                  title="ReactNode"
                >
                  <div
                    class="ezd-select-item-option-content"
                  >
                    ReactNode
                  </div>
                  <span
                    aria-hidden="true"
                    class="ezd-select-item-option-state"
                    style="user-select:none;-webkit-user-select:none"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AutoComplete rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ezd-select ezd-select-rtl ezd-select-auto-complete ezd-select-single ezd-select-show-search"
>
  <div
    class="ezd-select-selector"
  >
    <span
      class="ezd-select-selection-search"
    >
      <input
        aria-activedescendant="undefined_list_0"
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autocomplete="off"
        class="ezd-select-selection-search-input"
        role="combobox"
        type="search"
        value=""
      />
    </span>
    <span
      class="ezd-select-selection-placeholder"
    />
  </div>
</div>
`;
